Added the file asset

--- a/2-Netflix-Homepage/index.html
+++ b/2-Netflix-Homepage/index.html
@@ -10,13 +10,13 @@
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title></title>
   </head>
   <body>
     <header class="showcase">
       <div class="showcase-top">
-        <img src="img/logo.png" alt="Netflix" />
+        <img src="asset/logo.png" alt="Netflix" />
         <a href="#" class="btn btn-rounded">Sign In</a>
       </div>
       <div class="showcase-content">
@@ -57,7 +57,7 @@
               </p>
               <a href="#" class="btn btn-lg">Watch Free for 30 days</a>
             </div>
-            <img src="img/tab-content-1.png" alt="" />
+            <img src="asset/tab-content-1.png" alt="" />
           </div>
         </div>
 
@@ -72,7 +72,7 @@
           </div>
           <div class="tab-2-content-bottom">
             <div>
-              <img src="img/tab-content-2-1.png" alt="" />
+              <img src="asset/tab-content-2-1.png" alt="" />
               <p class="text-md">Watch on your TV</p>
               <p class="text-dark">
                 Smart TVs, PlayStation, Xbox, Chromecase, Apple TV, Blu-ray
@@ -81,7 +81,7 @@
             </div>
 
             <div>
-              <img src="img/tab-content-2-2.png" alt="" />
+              <img src="asset/tab-content-2-2.png" alt="" />
               <p class="text-md">Watch instantly or download for later</p>
               <p class="text-dark">
                 Available on phone and tablet, wherever you go
@@ -89,7 +89,7 @@
             </div>
 
             <div>
-              <img src="img/tab-content-2-3.png" alt="" />
+              <img src="asset/tab-content-2-3.png" alt="" />
               <p class="text-md">Use any computer</p>
               <p class="text-dark">
                 Watch right on Netflix.com
@@ -201,6 +201,6 @@
         </ul>
       </div>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
