Fixed Image issues

--- a/18 - Apple HomePage/index.html
+++ b/18 - Apple HomePage/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Apple</title>
-    <meta author="Danish">
+    <meta author="saad">
 </head>
 
 <body>
