Fixed Image issues

--- a/18 - Apple HomePage/index.html
+++ b/18 - Apple HomePage/index.html
@@ -49,7 +49,7 @@
                 chip.</p>
             <a href="" class="btn">Learn more</a>
             <a href="" class="btn">View pricing</a>
-            <img src="../image/iphone2.jpg"" alt="iPhone 14Pro">
+            <img src="image/iphone2.jpg" alt="iPhone 14Pro">
         </div>
     </section>
     <section class="hand">
@@ -62,7 +62,7 @@
                 <a href="" class="btn-inverse">View pricing</a>
             </div>
             <div class="right">
-                <img src="../image/iphone1.jpg"data-aos="fade-up" alt="">
+                <img src="image/iphone1.jpg"data-aos="fade-up" alt="">
             </div>
         </div>
     </section>
@@ -75,7 +75,7 @@
             <a href="" class="btn">View pricing</a>
         </div>
         <div class="img"data-aos="fade-up">
-            <img src="../image/airpods.jpg" alt="Airpods Pro">
+            <img src="image/airpods.jpg" alt="Airpods Pro">
         </div>
     </section>
     <section class="watch"data-aos="fade-up">
@@ -88,13 +88,13 @@
             <a href="" class="btn-inverse">Learn more</a>
             <a href="" class="btn-inverse">Order now</a>
             <div class="img"data-aos="fade-up">
-                <img src="../image/watch9.png" alt="iWatch">
+                <img src="image/watch9.png" alt="iWatch">
             </div>
         </div>
     </section>
     <section class="watch2"data-aos="fade-up">
         <div class="img">
-            <img src="../image/watch8.png" alt="">
+            <img src="image/watch8.png" alt="">
         </div>
         <div class="text">
             <h1><i class="fa fa-brands fa-apple"></i>WATCH</h1>
@@ -116,7 +116,7 @@
             <a href="" class="">Order now</a>
         </div>
         <div class="img"data-aos="fade-up">
-            <img src="../image/watches.png" alt="watch se">
+            <img src="image/watches.png" alt="watch se">
         </div>
     </section>
     <section class="fitness" data-aos="fade-up">
@@ -129,7 +129,7 @@
             <a href="" class="">Order now</a>
         </div>
         <div class="img"data-aos="fade-up">
-            <img src="../image/fitness.jpg" alt="Fitness">
+            <img src="image/fitness.jpg" alt="Fitness">
         </div>
     </section>
     <footer class="main-footer" data-aos="fade-up">
