--- a/29-BMI Calculator/bmi.html
+++ b/29-BMI Calculator/bmi.html
@@ -1,20 +1,11 @@
 <html>
  <head>
  <title>BMI Calculator</title>
+ <link rel="stylesheet" href="style.css">
+ <script src="script.js"></script>
+
  </head>
- <style>
- form, input {
-    font-size: 18px;
-
-
- }
- body {
-   background-color: whitesmoke;
- }
- #button {
-     background-color: blueviolet;
- }
- </style>
+ 
  <body>
  <h1 align="center">BMI Calculator</h1>
  <form>
@@ -33,27 +24,6 @@
 
  <p id="result"></p>
  </form>
-<script type="text/javascript">
- function calculate() {
- var height =
-parseFloat(document.getElementById("height").value);
- var weight =
-parseFloat(document.getElementById("weight").value);
- var bmi = weight /(height*height);
- if(bmi < 18.5) {
- document.getElementById("result").innerHTML =
-"Underweight : " + bmi.toFixed(2);
- } else if (bmi >= 18.5 && bmi <= 24.9) {
- document.getElementById("result").innerHTML =
-"Healthy Weight : " + bmi.toFixed(2);
- } else if (bmi >= 25.0 && bmi <= 29.9) {
- document.getElementById("result").innerHTML =
-"Overweight : " + bmi.toFixed(2);
- } else if (bmi >= 30.0) {
- document.getElementById("result").innerHTML =
-"Obesity : " + bmi.toFixed(2);
- }
- }
-</script>
+
  </body>
 </html>
